fixed pricecomposition charts when dark mode

--- a/styles/Trading.module.scss
+++ b/styles/Trading.module.scss
@@ -237,6 +237,7 @@ $light-yellow: #f0b90b;
             height: 100%;
             min-height: 150px;
             font-size: 12px;
+            padding: 5px;
             &:focus {
               border: none;
               outline: none;
